[NTP4] Hack to fix app launch pref tick mark (✓) alignment regression.
R=estade@chromium.org
BUG=163335
TEST=right click app on NTP4 (not on CrOS, no apps there), look at tick marks.
NOTRY=true


Review URL: https://chromiumcodereview.appspot.com/11446005

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@171193 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 4eaa59bf61b134d79cedd565c0ab015dc18b75cd

--- a/chrome/browser/resources/ntp4/apps_page.css
+++ b/chrome/browser/resources/ntp4/apps_page.css
@@ -84,6 +84,10 @@
   z-index: 1000;
 }
 
+.app-context-menu > [checked]::before {
+  height: 5px;
+}
+
 .launch-click-target {
   cursor: pointer;
 }
